--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "faker": "^6.6.6",
     "firebase": "^10.3.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -26,6 +27,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "daisyui": "^3.7.3"
   }
 }
