--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "sweetalert2": "^11.7.27",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
